# DEXiRE

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
dexire/: dexire.py
dexire/core/: clause.py  dexire_abstract.py  expression.py  rule.py  rule_set.py
dexire/rule_extractors/: one_rule_extractor.py  tree_rule_extractor.py
dexire/utils/: activation_discretizer.py  probabilistic_ranking.py
examples/: breast_cancer_classification.ipynb
test/: test_dexire_init.py  test_dexire_pipeline.py
