[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dexire"
version = "0.1"
description = "Deep Explanation and Rule Extractor (DEXiRE) extracts rules to explain deep learning models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Victor Hugo Contreras" },
  { name = "Davide Calvaresi" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "numpy==2.4.2",
  "tensorflow==2.20.0",
  "pandas==3.0.0",
  "scikit-learn==1.8.0",
  "sympy==1.14.0",
  "matplotlib==3.10.8",
  "seaborn==0.13.2",
  "graphviz==0.21",
  "dill==0.4.1",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2",
]

[tool.setuptools.packages.find]
include = ["dexire*"]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore:__array__ implementation doesn't accept a copy keyword, so passing copy=False failed.*:DeprecationWarning:keras\\.src\\.backend\\.tensorflow\\.core",
]
